[gd_scene load_steps=3 format=3 uid="uid://1okqx0to7am1"]

[ext_resource type="Script" path="res://UserCreate.gd" id="1_7dg3b"]
[ext_resource type="FontFile" uid="uid://nj5b3hat322u" path="res://Fonts/04B_30__.TTF" id="1_sndd1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7dg3b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 1153.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.0
offset_top = 237.0
offset_right = 149.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sndd1")
text = "Username: "

[node name="userId" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sndd1")
placeholder_text = "something creative"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sndd1")
text = "Password: "

[node name="password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sndd1")
placeholder_text = "something secure"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_right = 255.0
offset_bottom = 418.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_sndd1")
text = "Register New Buckshot User:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 497.0
offset_top = 347.0
offset_right = 661.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("1_sndd1")
text = "Create User"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="VBoxContainer/userId" to="." method="_on_user_id_text_changed"]
[connection signal="text_changed" from="VBoxContainer/password" to="." method="_on_password_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
